--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -1,10 +1,14 @@
 <web-app>
     <servlet>
+
         <servlet-name>loadAppartements</servlet-name>
-        <servlet-class>LoadAppartements</servlet-class>
+        <jsp-file>/jsp/index.jsp</jsp-file>
+
     </servlet>
     <servlet-mapping>
+
         <servlet-name>loadAppartements</servlet-name>
         <url-pattern>/loadAppartements</url-pattern>
+
     </servlet-mapping>
 </web-app>
