--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -1,14 +1,20 @@
 <web-app>
     <servlet>
-
         <servlet-name>loadAppartements</servlet-name>
         <jsp-file>/jsp/index.jsp</jsp-file>
-
     </servlet>
-    <servlet-mapping>
+    <servlet>
+        <servlet-name>loadStudio</servlet-name>
+        <jsp-file>/jsp/studio.jsp</jsp-file>
+    </servlet>
 
+    <servlet-mapping>
         <servlet-name>loadAppartements</servlet-name>
         <url-pattern>/loadAppartements</url-pattern>
-
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>loadStudio</servlet-name>
+        <url-pattern>/loadStudio</url-pattern>
+    </servlet-mapping>
+
 </web-app>
